<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ctadmin.pk.MainActivity">
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_text_view1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1.58"
                android:text="@string/teama"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold" />

            <Button
                android:id="@+id/next_button23"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.00"
                android:text="@string/button1" />

            <Button
                android:id="@+id/next_button3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.00"
                android:text="@string/button2" />

            <Button
                android:id="@+id/next_button4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.00"
                android:text="@string/button3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1.60"
                android:text="@string/teamb"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold" />

            <Button
                android:id="@+id/next_button7"
                android:layout_width="186dp"
                android:layout_height="0dp"
                android:layout_weight="1.00"
                android:text="@string/button4" />

            <Button
                android:id="@+id/next_button9"
                android:layout_width="187dp"
                android:layout_height="0dp"
                android:layout_weight="1.00"
                android:text="@string/button5" />

            <Button
                android:id="@+id/next_button99"
                android:layout_width="199dp"
                android:layout_height="0dp"
                android:layout_weight="1.00"
                android:text="@string/button6" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button7" />

</LinearLayout>